# channels-last-groupnorm

./: '  .ycm_extra_conf.py  GN_pseudocode  LICENSE  MANIFEST.in  NG_grid_gn_kernel.cu  NH_grid_gn_kernel.cu  N_grid_gn_kernel.cu  README.md  Welford.h  benchmark.py  bwd_gn_kernel.cu  custom_gn.cpp  custom_gn.py  fully_fused_gn_kernel.cu  gn_kernel.cu  gn_kernel.h  nchw_kernel.cu  prof.py  pyproject.toml  scale_shift_kernel.h  vecs.h
src/gnnhwc/: __init__.py  custom_gn.py
src/gnnhwc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gnnhwc/csrc/: custom_gn.cpp  gn_kernel.cu  gn_kernel.h  nchw_kernel.cu
test/: check_outputs.py  nchw_nhwc_equal.py  trailing_dims.py
