[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnnhwc"
version = "0.0.1"
authors = [
  { name="Thaihoa Nguyen", email="tonanhhoaduc@gmail.com" },
]
description = "Channels last group normalization in Pytorch"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/latentCall145/channels-last-groupnorm"
Issues = "https://github.com/latentCall145/channels-last-groupnorm/issues"
